@@ -17,8 +17,8 @@
 #   http://opensource.org | osi@opensource.org
 #
 ################################################################################
-# Includes DSO modules (this is mandatory in proftpd 1.3)
-#Include /etc/proftpd/modules.conf
+LoadModule mod_sql.c
+LoadModule mod_sql_mysql.c
 
 # Set off to disable IPv6 support which is annoying on IPv4 only boxes.
 UseIPv6                    off
@@ -160,6 +160,7 @@ Group                      nogroup
 </IfModule>
 
 # ispCP SQL Managment
+<IfModule mod_sql_mysql.c>
 SQLBackend                 mysql
 SQLAuthTypes               Crypt
 SQLAuthenticate            on
@@ -167,6 +168,7 @@ SQLConnectInfo             {DATABASE_NAME}@{DATABASE_HOST} {DATABASE_USER} {DATA
 SQLUserInfo                ftp_users userid passwd uid gid homedir shell
 SQLGroupInfo               ftp_group groupname gid members
 SQLMinID                   2000
+</IfModule>
 
 # A basic anonymous configuration, no upload directories.
 
