@@ -1,4 +1,4 @@
-ispcp_table = PortugueseBrazilian
+ispcp_table = PortuguesBrazil
 ispcp_language = Portugues (Brazil)
 ispcp_languageSetlocaleValue = pt_BR
 encoding = UTF-8
