@@ -4,8 +4,12 @@ ispCP ω 1.0.0 Changelog
 2008-03-23 Benedikt Heintel
 	- GUI:
 		* Fixed: Warnings and Notices if no Database found or no conection to it
+		* Fixed: Reformated SSL switch
+		* Fixed: Error in Circular Mail if no user set
 	- ENGINE:
 		* Fixed #836: Static awstats in user's language
+	- DISTS:
+		* Fixed: (OpenSuse) proftpd.conf not working out of box
 
 2008-03-22 Benedikt Heintel
 	- GUI:
